--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,15 @@
-*{
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
 
 body {
   background-color: #233142; 
   color:  #e3e3e3;
 }
-
-
-
-
 
